vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/Studnet_Loan_Alternative_Payment__c.object-meta.xml
<CustomObject>
    <label>Student Program - Loan Alternative</label>
    <nameField>
        <displayFormat>PMT{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program - Loan Alternatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>