vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/fields/InterestRates__c.field-meta.xml
<CustomField>
    <fullName>InterestRates__c</fullName>
    <label>Interest Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>