vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/fields/LoanType__c.field-meta.xml
<CustomField>
    <fullName>LoanType__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanType</valueSetName>
    </valueSet>
</CustomField>