vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/fields/OriginationFeeSurcharge__c.field-meta.xml
<CustomField>
    <fullName>OriginationFeeSurcharge__c</fullName>
    <label>Origination Fee Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>