vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/fields/StudentProgram__c.field-meta.xml
<CustomField>
    <fullName>StudentProgram__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Program</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipName>Studnet_Loan_Alternative_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>