vemo-app/main/default/objects/Studnet_Loan_Alternative_Payment__c/fields/TotalPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalPayment__c</fullName>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>